<resources>
    <string name="app_name">智慧校园</string>
    <string name="about">关于</string>
    <string name="about_with_qq">关于(官方微信公众号:naquapp)</string>
    <string name="action_error">操作失败</string>
    <string name="addinfo">编辑资料</string>
    <string name="attend_time_title">认领时间</string>
    <string name="attend_user">参与者</string>
    <string name="auth_account_input_password_notice">为了保障账号安全。请设置支付密码</string>
    <string name="auth_account_notice">仅支持绑定实名认证的支付宝账号，绑定账号仅供于提现使用，绑定支付宝账号后不能修改</string>
    <string name="auth_account_second_notice">再次输入认证支付账号信息</string>
    <string name="back">返回</string>
    <string name="call_mode">听筒模式</string>
    <string name="cancel">取消</string>
    <string name="change_ip">正在测试服，切换到正式服</string>
    <string name="change_ip_test">正在正式服，切换到测试服</string>
    <string name="check">选择</string>
    <string name="city_none">---</string>
    <string name="confirm">确定</string>
    <string name="confirm_send_goods">确认发布</string>
    <string name="copy">复制</string>
    <string name="cropper">选取</string>
    <string name="evaluation_hint">请写下感受吧，对他人帮助很大的哦！</string>
    <string name="evaluation_rate">评分</string>
    <string name="exchange_password_auth_account_notice">向平台支付0.01元进行验证，验证完成后验证金将退还到支付账号</string>
    <string name="exit">退出当前账号</string>
    <string name="exiting">退出中。。。</string>
    <string name="female">女</string>
    <string name="forgotten">忘记密码</string>
    <string name="get_goods">获得物品</string>
    <string name="get_register_image_error">文件读取失败，请重新选择</string>
    <string name="getauthcode">获取验证码</string>
    <string name="goods_applying">热抢中</string>
    <string name="goods_cancel">已完结</string>
    <string name="goods_comment">评论</string>
    <string name="goods_complete">已结束</string>
    <string name="goods_delivery_error">揽件失败</string>
    <string name="goods_detail">详情</string>
    <string name="goods_detail_hint">描述一下你的物品(尽可能描述详细，例如买的时间用了几次，现在如何等)</string>
    <string name="goods_logistics">仅支持同城自取</string>
    <string name="goods_name_hint">物品名称</string>
    <string name="goods_order_apply">免费拿</string>
    <string name="goods_position">宝贝位置(仅限于计算邮费)</string>
    <string name="goods_sended">已发货</string>
    <string name="goods_type">分类</string>
    <string name="goods_type_beauty">美妆</string>
    <string name="goods_type_books">书籍</string>
    <string name="goods_type_digital">数码</string>
    <string name="goods_type_error">-- --</string>
    <string name="goods_type_livelihood">生活</string>
    <string name="goods_type_luggage">箱包</string>
    <string name="goods_type_maternal">母婴</string>
    <string name="goods_type_notice">请选择分类</string>
    <string name="goods_type_others">其他</string>
    <string name="goods_type_shoes_clothes">鞋服</string>
    <string name="goods_waite_delivery">待揽件</string>
    <string name="goods_waite_pay">待付邮费</string>
    <string name="goods_waite_recieve">待收货</string>
    <string name="goods_waite_send">待发货</string>
    <string name="goods_weight_volume">宝贝重量预估(单位Kg)</string>
    <string name="guide_enter_text">开始体验</string>
    <string name="hint_authcode">请输入验证码</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_phone">请输入用户名</string>
    <string name="hint_register_password">请设置6到16位的登录密码</string>
    <string name="invite">活动码</string>
    <string name="invite_friend">分享</string>
    <string name="invite_hint">请输入邀请码</string>
    <string name="invite_notice">请输入好友分享给您的活动码</string>
    <string name="invite_text">请输入邀请码(可选)</string>
    <string name="loading">加载中…</string>
    <string name="login">登录</string>
    <string name="logining">登录中。。。</string>
    <string name="logist_type_express">快递交易</string>
    <string name="logist_type_express_notice">请与对方协商物流与邮费等相关细节</string>
    <string name="logist_type_same_city">当面交易</string>
    <string name="logist_type_same_city_notice">请与对方协商发货等相关细节</string>
    <string name="logistic_post_company">请选择快递公司</string>
    <string name="logistic_post_number">请输入您的物流单号</string>
    <string name="male">男</string>
    <string name="message_image_desc">Message Image</string>
    <string name="message_null">不能发送空内容哦！</string>
    <string name="my_balance_account">我的钱包</string>
    <string name="my_score">我的积分</string>
    <string name="next">下一步</string>
    <string name="no">否</string>
    <string name="no_net">网络连接不可用</string>
    <string name="person_invite_code">个人活动码 :</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_pull_label">向下拉动可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中…</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
    <string name="rant_goods_prize">保证金:</string>
    <string name="refresh">刷新</string>
    <string name="reget">重新获取</string>
    <string name="register">注册</string>
    <string name="register_error_param_phone">手机号码错误</string>
    <string name="register_error_phone">该手机号码已注册</string>
    <string name="register_error_server_error">服务器内部错误</string>
    <string name="register_fail">注册push失败.</string>
    <string name="register_notice">点击下一步即表示您同意拿趣的</string>
    <string name="register_success">注册push成功.</string>
    <string name="register_user_proto">《用户协议》</string>
    <string name="report_ad">垃圾营销</string>
    <string name="report_hint">最多输入150字</string>
    <string name="report_other">其他</string>
    <string name="report_reactionary">政治敏感</string>
    <string name="report_sex">淫秽色情</string>
    <string name="report_title">举报</string>
    <string name="report_violence">血腥暴力</string>
    <string name="reporting">提交中…</string>
    <string name="resend">重发</string>
    <string name="save">保存</string>
    <string name="saving">保存中</string>
    <string name="search">搜索</string>
    <string name="select_none">取消</string>
    <string name="selectcity">请选择所在省市</string>
    <string name="selectnickname">请填写昵称</string>
    <string name="selectsex">请选择性别</string>
    <string name="send">发送</string>
    <string name="send_message">发送</string>
    <string name="send_type">邮费支付由买卖双方商量</string>
    <string name="set_accept_time_fail">设置接收时间失败： %1$s.</string>
    <string name="set_accept_time_success">设置接收时间： %1$s - %2$s 成功.</string>
    <string name="set_alias_fail">设置别名： \"%1$s\" 失败.</string>
    <string name="set_alias_success">设置别名： \"%1$s\" 成功.</string>
    <string name="sex">性别</string>
    <string name="share">邀请好友</string>
    <string name="speaker_mode">扬声器模式</string>
    <string name="submit">提交</string>
    <string name="subscribe_topic_fail">订阅主题： \"%1$s\" 失败.</string>
    <string name="subscribe_topic_success">订阅主题： \"%1$s\" 成功.</string>
    <string name="sure">确定</string>
    <string name="sure_recieve">确认收货</string>
    <string name="tab_firstpage">首页</string>
    <string name="tab_message">消息</string>
    <string name="tab_my">我</string>
    <string name="tab_send">发布</string>
    <string name="take_camera_btn_text">拍照</string>
    <string name="take_photo_btn_text">照片</string>
    <string name="takephone">拍照</string>
    <string name="takepic">从相册选择</string>
    <string name="thank_invite">谢谢参与</string>
    <string name="third_login">你还可以选择第三方登录</string>
    <string name="time_out">超时，请检查网络后重试</string>
    <string name="top_left_back">返回</string>
    <string name="umeng_example_home_btn_plus">社交分享</string>
    <string name="umeng_fb_back">Back</string>
    <string name="umeng_fb_change_contact_title">Change contact Info</string>
    <string name="umeng_fb_contact_email">Email</string>
    <string name="umeng_fb_contact_info">Contact Info</string>
    <string name="umeng_fb_contact_info_hint">Email, MSN, Gtalk, or whatever we can find you.</string>
    <string name="umeng_fb_contact_key_email">email</string>
    <string name="umeng_fb_contact_key_other">plain</string>
    <string name="umeng_fb_contact_key_phone">phone</string>
    <string name="umeng_fb_contact_key_qq">qq</string>
    <string name="umeng_fb_contact_other">Other</string>
    <string name="umeng_fb_contact_phone">Phone</string>
    <string name="umeng_fb_contact_qq">QQ</string>
    <string name="umeng_fb_contact_save">Save</string>
    <string name="umeng_fb_count_down">Count down</string>
    <string name="umeng_fb_feedback">Feedback</string>
    <string name="umeng_fb_no_record_permission">No permission of record</string>
    <string name="umeng_fb_notification_content_formatter_multiple_msg">You received %d new replies from the app developer.</string>
    <string name="umeng_fb_notification_content_formatter_single_msg">New reply: %s</string>
    <string name="umeng_fb_notification_ticker_text">Got new reply</string>
    <string name="umeng_fb_press_speech">Hold to Talk</string>
    <string name="umeng_fb_record_fail">Record fail</string>
    <string name="umeng_fb_record_time_short">Message too short</string>
    <string name="umeng_fb_release_cancel">Release to cancel</string>
    <string name="umeng_fb_release_send">Release to Send</string>
    <string name="umeng_fb_reply_content_default">Your precious feedback are appriciated.</string>
    <string name="umeng_fb_send">Send</string>
    <string name="umeng_fb_send_fail">Send fail</string>
    <string name="umeng_fb_sending">Sending…</string>
    <string name="umeng_fb_slide_up_cancel">Slide up to cancel</string>
    <string name="umeng_fb_time_minutes_ago">%d minutes ago</string>
    <string name="umeng_fb_time_pre_year_format">yy/MM/dd HH:mm:ss</string>
    <string name="umeng_fb_time_right_now">Just now</string>
    <string name="umeng_fb_time_this_year_format">MM/dd HH:mm:ss</string>
    <string name="umeng_fb_title">Feedback</string>
    <string name="umeng_fb_write_contact_title">Write contact Info</string>
    <string name="umeng_socialize_back">返回</string>
    <string name="umeng_socialize_cancel_btn_str">取消</string>
    <string name="umeng_socialize_comment">评论</string>
    <string name="umeng_socialize_comment_detail">评论详情</string>
    <string name="umeng_socialize_content_hint">说点啥…</string>
    <string name="umeng_socialize_friends">关注的好友</string>
    <string name="umeng_socialize_img_des"/>
    <string name="umeng_socialize_login">登录</string>
    <string name="umeng_socialize_login_qq">QQ空间</string>
    <string name="umeng_socialize_mail">邮件</string>
    <string name="umeng_socialize_msg_hor">小时前</string>
    <string name="umeng_socialize_msg_min">分钟前</string>
    <string name="umeng_socialize_msg_sec">秒前</string>
    <string name="umeng_socialize_near_At">最近@的好友</string>
    <string name="umeng_socialize_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_socialize_send">发布</string>
    <string name="umeng_socialize_send_btn_str">发送</string>
    <string name="umeng_socialize_share">分享</string>
    <string name="umeng_socialize_share_content">友盟社会化组件（SDK）让移动应用快速整合社交分享功能，我们简化了社交平台的接入，为开发者提供坚实的基础服务。（一）支持各大主流社交平台， （二）支持图片、文字、gif动图、音频、视频；@好友，关注官方微博等功能。 （三）提供详尽的后台用户社交行为分析。www.umeng.com/social</string>
    <string name="umeng_socialize_sina">新浪</string>
    <string name="umeng_socialize_sms">短信</string>
    <string name="umeng_socialize_text_add_custom_platform">请配置用户平台</string>
    <string name="umeng_socialize_text_alipay_key">支付宝</string>
    <string name="umeng_socialize_text_authorize">授权</string>
    <string name="umeng_socialize_text_choose_account">选择已有帐号登录</string>
    <string name="user_avator">头像</string>
    <string name="user_nickname">昵称</string>
    <string name="person_fabu">我发布的</string>
    <string name="person_goods_collect">我的收藏</string>
    <string name="person_receive_address">收货地址</string>
    <string name="person_appversion">版本信息</string>
    <string name="person_settings">退出登录</string>
</resources>