<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_activity"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/person_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- 头像, 用户名称等信息 -->
            <include android:id="@+id/person_head_layout"
                layout="@layout/person_head_slice"
                android:layout_width="match_parent"
                android:layout_height="140dip"/>
            <include layout="@layout/separator_line_margin_slice"/>
            <!-- 我发布的 -->
            <com.cdm.idlefish.view.SettingsCustomView
                android:id="@+id/person_fuba"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_row"
                android:clickable="true"
                android:focusable="true"
                custom:titleText="@string/person_fabu" />
            <include layout="@layout/separator_line_margin_slice"/>
            <!-- 我的收藏 -->
            <com.cdm.idlefish.view.SettingsCustomView
                android:id="@+id/person_collect_aview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_row"
                android:clickable="true"
                android:focusable="true"
                custom:titleText="@string/person_goods_collect" />
            <include layout="@layout/separator_line_margin_slice"/>
            <!-- 收货地址 -->
            <com.cdm.idlefish.view.SettingsCustomView
                android:id="@+id/person_receive_address_aview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_row"
                android:clickable="true"
                android:focusable="true"
                custom:titleText="@string/person_receive_address"
                android:visibility="gone"/>
            <include layout="@layout/separator_line_margin_slice"/>
            <!-- 版本信息 -->
            <com.cdm.idlefish.view.SettingsCustomView
                android:id="@+id/person_appversion"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_row"
                android:clickable="true"
                android:focusable="true"
                custom:titleText="@string/person_appversion" />
            <include layout="@layout/separator_line_margin_slice"/>
            <!-- 设置 -->
            <com.cdm.idlefish.view.SettingsCustomView
                android:id="@+id/person_settings"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_row"
                android:clickable="true"
                android:focusable="true"
                custom:titleText="@string/person_settings" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>